# mle-training

./: .gitignore  README.md  env.yml  nonstandardcode.py  pyproject.toml
docs/: conf.py  index.md  ingest_data.md  usage.md
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  .buildinfo.bak  config_manager copy.html  config_manager.html  genindex.html  index.html  ingest_data copy.html  ingest_data.html  objects.inv  py-modindex.html  score - Copy.html  score.html  search.html  searchindex.js  train.html  usage.html  utils.html
docs/_build/html/.doctrees/: config_manager copy.doctree  config_manager.doctree  environment.pickle  index.doctree  ingest_data copy.doctree  ingest_data.doctree  score - Copy.doctree  score.doctree  train.doctree  usage.doctree  utils.doctree
docs/_build/html/.doctrees/autoapi/: index.doctree
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/tamlep_package/: config_manager.html  ingest_data.html  score.html  train.html  utils.html
docs/_build/html/_sources/: config_manager copy.md.txt  config_manager.md.txt  index.rst.txt  ingest_data copy.md.txt  score - Copy.md.txt  score.md.txt  train.md.txt  utils.md.txt
docs/_build/html/_sources/autoapi/: index.rst.txt
docs/_build/html/autoapi/: index.html
docs/_build/html/autoapi/tamlep_package/: index.html
src/tamlep_package/: config.toml  config_manager.py  ingest_data.py  score.py  train.py  utils.py
tests/: conftest.py  test_ingest_data.py  test_installation.py  test_score.py  test_train.py
(+17 files in other folders)
